<resources>
    <string name="app_name">Hangman Game</string>
    <string name="choose_a_letter">CHOOSE A LETTER</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="f">F</string>
    <string name="h">H</string>
    <string name="c">C</string>
    <string name="g">G</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="k">K</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="gallows">gallows</string>
    <string name="head">head</string>
    <string name="body">body</string>
    <string name="arm1">arm1</string>
    <string name="arm2">arm2</string>
    <string name="leg1">leg1</string>
    <string name="leg2">leg2</string>
    <string name="new_game">new game</string>
    <string name="start">start</string>
    <string name="title">ARE YOU READY TO GET HANGED?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_again">play again?</string>
    <string name="menu">Menu</string>
</resources>
